add more function
Each Product can checkout